# cloudflare-dyndns-fritzbox

./: .gitignore  Caddyfile  Dockerfile  README.md  compose.yaml  example.env  generate-cert.sh  pyproject.toml  setup.sh  shell.nix
src/: main.py
